--- a/assets/style.css
+++ b/assets/style.css
@@ -5,18 +5,75 @@ body {
     background: lightgoldenrodyellow;
     font-family: 'Oswald', sans-serif;
 }
+#container {
+    height: 100%;
 
+}
 main {
     text-align: center;
-    margin-top: 4em;
-    font
+    width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: coral;
+    border: 1px solid black;
+    margin-top: 3em;
+    border-radius: 15px;
 }
 
 h1{
-    font-size: xx-large;
+    font-size: xx-large ;
+    margin-top: 1em;
 }
 
 h2 {
     margin-top: 2em;
     font-size: x-large;
+}
+
+form {
+    margin-top: 2em;
+    margin-bottom: 1em;
+}
+
+label {
+    font-size: large;
+    
+}
+
+form button {
+    margin-top: 2em;
+    font-family: 'Oswald', sans-serif;
+    size: 1.2em;
+
+}
+
+section {
+    height: 60%;
+    width: 100%;
+}
+
+
+.singleTask {
+
+  width: 300px;
+  text-align: center;
+  background-color: coral;
+  padding-bottom: 15px;
+  padding-top: 15px;
+  border: 1px solid black;
+  border-radius: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+}
+
+.singleTask button{
+    margin-top: 10px;
+}
+
+footer {
+  text-align: center;
+  position: absolute;
+  width: 100%;
+
 }
