--- a/assets/style.css
+++ b/assets/style.css
@@ -4,6 +4,9 @@
 body {
     background: lightgoldenrodyellow;
     font-family: 'Oswald', sans-serif;
+    background-image: url(/assets/To-Do-List.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 #container {
     height: 100%;
@@ -18,6 +21,7 @@ main {
     border: 1px solid black;
     margin-top: 3em;
     border-radius: 15px;
+    box-shadow: 15px 16px 22px 8px grey;
 }
 
 h1{
@@ -65,14 +69,9 @@ section {
   margin-left: auto;
   margin-right: auto;
   margin-top: 30px;
+  box-shadow: 15px 16px 22px 8px grey;
 }
 
 .singleTask button{
     margin-top: 10px;
-}
-
-footer {
-  text-align: center;
-  width: 100%;
-
 }
